01Nov05=======================================================================
1. add log2csv.pl for printing out logfiles
25Oct05=======================================================================
1. Incorporated the cty.dat from Jim dated today (25Oct05).
08Oct05=======================================================================
1. Reject PC11s with blank spot callsigns
01Sep05=======================================================================
1. Change the logic of propagating WWV broadcasts. Now all non-input filtered
PC23s will be sent on. Previously only the first successful new WWV was 
rebroadcast.
2. fix the problem with by_dxcc and origin_dxcc not working on WWV.
29Aug05=======================================================================
1. try something else to resolve/prevent more of these spot dupes. It appears
that there is software out there chopping off variable amounts from the ends
of comment fields. This makes the task of detecting dupes that much harder.
10Aug05=======================================================================
1. trim dx spot duplicate length after normalisation
2. Do the same for announces
08Jul05=======================================================================
1. new CTY.DAT encorporated
27May05=======================================================================
1. change copyright in dbg message at startup.
25May05=======================================================================
1. Added a means to import a script of arbitrary commands to allow external
programs to do stuff.
23Mar05=======================================================================
1. fix (un)set/badspotter so that it only stores non-ssid calls.
2. mention action on talk and ann/full in help.
22Mar05=======================================================================
1. Fix ? so it works again.
2. Fix Aliases for sh/c so they are correct
3. Fix sh/connect for AGW ports and other niffnaffs.